--- a/Tilt Theme/Theme.css
+++ b/Tilt Theme/Theme.css
@@ -1,4 +1,4 @@
-/* Boku no Hero Academia Theme by Valerio Lyndon / Revision 3 */
+/* "Tilt" Theme by Valerio Lyndon / Revision 3 */
 
 @import url('https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Open+Sans:400,700');
 
